--- a/apps/contact_form/reject.html
+++ b/apps/contact_form/reject.html
@@ -4,15 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odrzucenie wysłania</title>
+    <title>Formularz odrzucony</title>
 
     <!-- Import stylu do formularza -->
     <link rel="stylesheet" href="style.css" type="text/css" />
 
 </head>
 
-<body>
-    <p>Formularz został odrzucony</p>
+<body class="bakgroundformessage">
+    <div class="boxformessage">
+        <div class="messageafterformsend">
+            <p>Coś poszło nie tak, formularz został odrzucony</p>
+            <a href="index.html">Wróć do strony głównej</a>
+        </div>
+    </div>
 </body>
 
 </html>
