--- a/apps/contact_form/index.html
+++ b/apps/contact_form/index.html
@@ -14,17 +14,16 @@
 
 <body>
     <div class="mailer">
-        <form id='mail' method='post' class="mail" action="contact.php">
+        <form id='mail' method='post' class="mail">
 
             <label for='email'>Podaj swój e-mail <span>*</span></label>
-            <div id="mailvalidation">Error test 1</div>
-            <input type='text' name='email' id='email' placeholder='Wpisz swój e-mail' required />
+            <div id="mailvalidation" class='mailvalidation'></div>
+            <input type='text' name='email' id='email' placeholder='Wpisz swój e-mail' />
 
-            <label for='message'>Wiadomość</label>
-            <div id="messagevalidation">Error test 2</div>
+            <label for=' message'>Wiadomość</label>
             <textarea placeholder="Wpisz treść swojego zlecenia" id="message" name='message' class="message"></textarea>
 
-            <input id='submit' type='submit' name='Submit' value='Wyślij' class="submit" />
+            <input id='submit' name='Submit' value='Wyślij' class="submit" />
             <input type="text" name="hidden" class="hidden" value="">
 
         </form>
